add todo comment

--- a/apps/pattern-lab/src/_includes/utils/docs.twig
+++ b/apps/pattern-lab/src/_includes/utils/docs.twig
@@ -117,6 +117,7 @@
               {#},#}
               {#icon: false,#}
             {#} only %}#}
+            {#@todo I would like to do this with a proper bolt component, however there is not a way to set `target="_parent"` while using the headline component. #}
             <h3 class="c-bolt-headline--link u-bolt-margin-bottom-none c-bolt-headline c-bolt-headline--regular c-bolt-headline--small c-bolt-headline--capitalize" data-scroll-offset="70">
               <span class="c-bolt-headline__text">
                 <a class="c-bolt-link c-bolt-link--headline" href="{{ link.url }}" target="_parent">
