add cacheBuster to PL js

--- a/apps/pattern-lab/src/_meta/_01-foot.twig
+++ b/apps/pattern-lab/src/_meta/_01-foot.twig
@@ -5,7 +5,7 @@
     {# @TODO: how do we get this to use the exact same values from our global .js config without having the source of truth live as a .yml or .json file...? #}
     {% set assets = get_data("@bolt-assets/bolt-webpack-manifest.json") %}
 
-    <script src="{{ assets["bolt-global.js"] }}" async></script>
+    <script src="{{ assets["bolt-global.js"] }}?cachebuster="{{ cacheBuster }}"" async></script>
 
     {# Code syntax highlighting - https://github.com/imsky/holder #}
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
