--- a/apps/pattern-lab/src/_includes/utils/docs.twig
+++ b/apps/pattern-lab/src/_includes/utils/docs.twig
@@ -100,31 +100,23 @@
       <ul class="c-bolt-docs__page-nav-list">
         {% for link in links %}
           <li>
-            {#{% include "@bolt/headline.twig" with {#}
-              {#size: "small",#}
-              {#weight: "regular",#}
-              {#transform: "capitalize",#}
-              {#tag: "h3",#}
-              {#text: link.text,#}
-              {#url:  link.url,#}
-              {#target: '_parent', // This needs to be added to headline component #}
-              {#attributes: {#}
-                {#class: [#}
-                  {#"c-bolt-headline--link",#}
-                  {#"u-bolt-margin-bottom-none"#}
-                {#],#}
-                {#'data-scroll-offset': 70#}
-              {#},#}
-              {#icon: false,#}
-            {#} only %}#}
-            {#@todo I would like to do this with a proper bolt component, however there is not a way to set `target="_parent"` while using the headline component. #}
-            <h3 class="c-bolt-headline--link u-bolt-margin-bottom-none c-bolt-headline c-bolt-headline--regular c-bolt-headline--small c-bolt-headline--capitalize" data-scroll-offset="70">
-              <span class="c-bolt-headline__text">
-                <a class="c-bolt-link c-bolt-link--headline" href="{{ link.url }}" target="_parent">
-                  <span class="c-bolt-link__text">{{ link.text }}</span>
-                </a>
-              </span>
-            </h3>
+            {% include "@bolt/headline.twig" with {
+              size: "small",
+              weight: "regular",
+              transform: "capitalize",
+              tag: "h3",
+              text: link.text,
+              url:  link.url,
+              target: '_parent',
+              attributes: {
+                class: [
+                  "c-bolt-headline--link",
+                  "u-bolt-margin-bottom-none"
+                ],
+                'data-scroll-offset': 70
+              },
+              icon: false,
+            } only %}
           </li>
         {% endfor %}
       </ul>
