add pl styling for shadow demo

--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -62,3 +62,17 @@ ul.bolt-icon-list-demo {
     }
   }
 }
+
+.bolt-shadow-demo {
+  &__card {
+    background: #fff;
+    border-radius: 3px;
+    display: inline-block;
+    height: 100px;
+    margin: .5rem;
+    position: relative;
+    width: 100px;
+    vertical-align: top;
+    padding: 1.5rem;
+  }
+}
