add warning for bad values passed into bolt shadow mixin

--- a/packages/core/styles/02-tools/tools-shadow/_tools-shadow.scss
+++ b/packages/core/styles/02-tools/tools-shadow/_tools-shadow.scss
@@ -12,6 +12,8 @@
     &:hover {
       box-shadow: map-get(map-get($bolt-shadow-styles, $level), 'hover');
     }
+  } @else {
+    @warn 'A value was passed into @include bolt-shadow() that is not defined in $bolt-shadow-styles';
   }
 }
 
