--- a/apps/pattern-lab/src/_patterns/01-styleguide/40-utilities/shadow.twig
+++ b/apps/pattern-lab/src/_patterns/01-styleguide/40-utilities/shadow.twig
@@ -1,3 +1,7 @@
+<h4>Bolt Shadow Values</h4>
+
+{#@todo Lets dynamically generate this from bolt data #}
+{#@todo As well as generate the utility class for display #}
 <div class="bolt-shadow-demo__card bolt-shadow--b1">B1</div>
 <div class="bolt-shadow-demo__card bolt-shadow--l1">L1</div>
 <div class="bolt-shadow-demo__card bolt-shadow--l2">L2</div>
@@ -5,3 +9,21 @@
 <div class="bolt-shadow-demo__card bolt-shadow--l4">L4</div>
 <div class="bolt-shadow-demo__card bolt-shadow--l5">L5</div>
 <div class="bolt-shadow-demo__card bolt-shadow--l6">L6</div>
+
+<h5>Utility Classes</h5>
+
+<p>Simply add the utility class "bolt-shadow--xx" where xx equals the level of shadow you which to use (B1, L1-L6).</p>
+
+{{ '```html
+<div class="bolt-shadow--l1"> ... </div>
+```' | markdown }}
+
+<h5>Mixin</h5>
+
+<p>There is also a shadow mixin available for use in sass/scss. The mixin takes one argument, a string corresponding to the level of shadow desired.</p>
+
+{{ '```scss
+.class {
+  @include bolt-shadow(\'l1\');
+}
+```' | markdown }}
