--- a/packages/core/styles/02-tools/tools-shadow/_tools-shadow.scss
+++ b/packages/core/styles/02-tools/tools-shadow/_tools-shadow.scss
@@ -1,51 +1,20 @@
 /**
  Mixin that adds shadow effect, including hover animation
+ see `_settings-shadow.scss`
 */
-@mixin bolt-shadow($level: 'G') {
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  &:hover {
-    transform: translateY(-2px);
-  }
-
-  @if map-has-key($bolt-shadow-values, $level) {
-    box-shadow: map-get(map-get($bolt-shadow-values, $level), 'base');
-    &:hover {
-      box-shadow: map-get(map-get($bolt-shadow-values, $level), 'hover');
-    }
+@mixin bolt-shadow($level: 'G', $lifted: false) {
+  @if map-has-key($shadows, $level) {
+    $shadows: map-get($bolt-shadows, 'sets');
   } @else {
-    @warn 'A value was passed into @include bolt-shadow() that is not defined in $bolt-shadow-values';
+    @error 'A value, ' + $level +  ', was passed into @include bolt-shadow() that is not defined in $bolt-shadows';
+  }
+  @if $lifted {
+    transform: translateY(-2px);
+    box-shadow: unquote(map-get(map-get($shadows, $level), 'hover'));
+  } @else {
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    box-shadow: unquote(map-get(map-get($shadows, $level), 'base'));
   }
 }
 
 
-/**
- Utility Classes for adding shadow effects
- @todo Generate this dynamically from $bolt-shadow-values
-*/
-.bolt-shadow--b1 {
-  @include bolt-shadow('b1');
-}
-
-.bolt-shadow--l1 {
-  @include bolt-shadow('l1');
-}
-
-.bolt-shadow--l2 {
-  @include bolt-shadow('l2');
-}
-
-.bolt-shadow--l3 {
-  @include bolt-shadow('l3');
-}
-
-.bolt-shadow--l4 {
-  @include bolt-shadow('l4');
-}
-
-.bolt-shadow--l5 {
-  @include bolt-shadow('l5');
-}
-
-.bolt-shadow--l6 {
-  @include bolt-shadow('l6');
-}
