--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -68,11 +68,15 @@ ul.bolt-icon-list-demo {
     background: #fff;
     border-radius: 3px;
     display: inline-block;
-    height: 100px;
+    height: 225px;
     margin: .5rem;
     position: relative;
-    width: 100px;
+    width: 225px;
     vertical-align: top;
-    padding: 1.5rem;
+    padding: 0.7rem;
+
+    code {
+      font-size: 0.7rem;
+    }
   }
 }
