--- a/packages/core/styles/01-settings/settings-shadow/_settings-shadow.scss
+++ b/packages/core/styles/01-settings/settings-shadow/_settings-shadow.scss
@@ -4,10 +4,10 @@
 $bolt-shadows: (
   'utility-class-prefix': 'u-bolt-shadow--',
   'sets': (
-    'b1': (
-      'base': 'inset 0 1px 3px rgba(0,0,0,0.12), inset 0 1px 2px rgba(0,0,0,0.24)',
-      'hover': ''
-    ),
+    //'b1': (
+    //  'base': 'inset 0 1px 3px rgba(0,0,0,0.12), inset 0 1px 2px rgba(0,0,0,0.24)',
+    //  'hover': ''
+    //),
     'l1': (
       'base': '0 1px 2px 1px rgba(6,10,36,0.08)',
       'hover': ''
