one more dynamic value in docs

--- a/apps/pattern-lab/src/_patterns/01-styleguide/40-utilities/shadow.twig
+++ b/apps/pattern-lab/src/_patterns/01-styleguide/40-utilities/shadow.twig
@@ -37,12 +37,12 @@
 {{ '```scss
 /* Without hover effect */
 .class {
-  @include bolt-shadow(\'l2\');
+  @include bolt-shadow(\'' ~ bolt.data.shadows.sets|keys|first ~ '\');
 }
 
 /* With hover effect */
 .class {
-  @include bolt-shadow(\'l2\', true);
+  @include bolt-shadow(\'' ~ bolt.data.shadows.sets|keys|first ~ '\', true);
 }
 
 ```' | markdown }}
