--- a/packages/core/styles/02-tools/tools-shadow/_tools-shadow.scss
+++ b/packages/core/styles/02-tools/tools-shadow/_tools-shadow.scss
@@ -1,6 +1,7 @@
 /**
  Mixin that adds shadow effect, including hover animation
  see `_settings-shadow.scss`
+ @todo Salem, should these have important added to them?
 */
 @mixin bolt-shadow($level: 'G', $lifted: false) {
   @if map-has-key($shadows, $level) {
