fix incorrect mixin for z shadow in pl

--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -23,7 +23,7 @@ bolt-demo {
   background-color: bolt-color(white);
   position: sticky;
   top: 0;
-  z-index: z("nav");
+  z-index: bolt-z-index("nav");
   margin-bottom: 0;
   margin-left: -1 * bolt-spacing(medium);
   margin-right: -1 * bolt-spacing(medium);
