--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -62,3 +62,21 @@ ul.bolt-icon-list-demo {
     }
   }
 }
+
+.bolt-shadow-demo {
+  &__card {
+    background: #fff;
+    border-radius: 3px;
+    display: inline-block;
+    height: 225px;
+    margin: .5rem;
+    position: relative;
+    width: 225px;
+    vertical-align: top;
+    padding: 0.7rem;
+
+    code {
+      font-size: 0.7rem;
+    }
+  }
+}
