--- a/packages/core/styles/01-settings/settings-shadow/_settings-shadow.scss
+++ b/packages/core/styles/01-settings/settings-shadow/_settings-shadow.scss
@@ -1,6 +1,9 @@
-// These values can be applied using the mixins, functions, and utility classes
-// see _tools-shadow.scss
-// see _utilities-shadow.scss
+/* ------------------------------------ *\
+  SHADOW SETTINGS
+  see _tools-shadow.scss
+  see _utilities-shadow.scss
+\* ------------------------------------ */
+
 $bolt-shadows: (
   'utility-class-prefix': 'u-bolt-shadow--',
   'sets': (
