--- a/packages/core/styles/02-tools/tools-shadow/_tools-shadow.scss
+++ b/packages/core/styles/02-tools/tools-shadow/_tools-shadow.scss
@@ -1,19 +1,20 @@
-/**
- Mixin that adds shadow effect, including hover animation
- see `_settings-shadow.scss`
-*/
-@mixin bolt-shadow($level: 'G', $lifted: false) {
-  @if map-has-key($shadows, $level) {
-    $shadows: map-get($bolt-shadows, 'sets');
+/* ------------------------------------ *\
+  SHADOW MIXIN
+  see `_settings-shadow.scss`
+\* ------------------------------------ */
+
+@mixin bolt-shadow($key: 'G', $lifted: false) {
+  $shadows: map-get($bolt-shadows, 'sets');
+  @if not(map-has-key($shadows, $key)) {
+    @error 'A value, ' + $key +  ', was passed into @include bolt-shadow() that is not defined in $bolt-shadows';
   } @else {
-    @error 'A value, ' + $level +  ', was passed into @include bolt-shadow() that is not defined in $bolt-shadows';
-  }
-  @if $lifted {
-    transform: translateY(-2px);
-    box-shadow: unquote(map-get(map-get($shadows, $level), 'hover'));
-  } @else {
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    box-shadow: unquote(map-get(map-get($shadows, $level), 'base'));
+    @if $lifted {
+      transform: translateY(-2px);
+      box-shadow: unquote(map-get(map-get($shadows, $key), 'hover'));
+    } @else {
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+      box-shadow: unquote(map-get(map-get($shadows, $key), 'base'));
+    }
   }
 }
 
