--- a/apps/bolt-site/templates/site.scss
+++ b/apps/bolt-site/templates/site.scss
@@ -193,6 +193,12 @@ $storefront-sidebar-width: 320px;
   padding: 0 0 0 0;
   transition: margin .4s;
 
+  a {
+    border-bottom: 1px dotted;
+    color: bolt-color(indigo);
+    font-weight: 600;
+  }
+
   > bolt-band:first-child {
     margin-bottom: 0;
     padding-bottom: 0;
