--- a/packages/core/styles/01-settings/_settings-z-index.scss
+++ b/packages/core/styles/01-settings/_settings-z-index.scss
@@ -5,7 +5,7 @@
 \* ------------------------------------ */
 
 $bolt-z-indexes: (
-  'utility-class-prefix': 'u-bolt-shadow--',
+  'utility-class-prefix': 'u-bolt-z-index--',
   sets: (
     modal: 200,
     modalBG: 180,
