--- a/apps/pattern-lab/src/_patterns/02-components/image/10-image-size-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/image/10-image-size-variations.twig
@@ -4,10 +4,51 @@
   ])
 %}
 
-<h3>Size: 100%</h3>
+<h4>640x480 jpg</h4>
+
 {% include '@bolt-components-image/image.twig' with {
-  lazyload: false,
   src: "/pattern-lab/images/placeholders/tout-4x3-climber.jpg",
   alt: "A Rock Climber",
-  imageAttributes: classes,
+} only %}
+
+<h4>500x500 jpg</h4>
+
+{% include '@bolt-components-image/image.twig' with {
+  src: "/pattern-lab/images/placeholders/500x500.jpg",
+  alt: "Bill Murrey"
+} only %},
+
+<h4>1151x638 jpg</h4>
+
+{% include '@bolt-components-image/image.twig' with {
+  src: "/pattern-lab/images/placeholders/landscape-16x9-mountains.jpg",
+  alt: "Mountains",
+} only %}
+
+<h4>1151x638 jpeg</h4>
+
+{% include '@bolt-components-image/image.twig' with {
+  src: "/pattern-lab/images/placeholders/landscape-16x9-mountains.jpeg",
+  alt: "Mountains",
+} only %}
+
+<h4>2712x2300 png</h4>
+
+{% include '@bolt-components-image/image.twig' with {
+  src: "/pattern-lab/images/content/charts/decision-hub-chart.png",
+  alt: "decision hub chart",
+} only %}
+
+<h4>3000x5336 jpeg</h4>
+
+{% include '@bolt-components-image/image.twig' with {
+  src: "/pattern-lab/images/content/screenshots/device-screenshot--phone.jpg",
+  alt: "device screenshot",
+} only %}
+
+<h4>124x33 svg</h4>
+
+{% include '@bolt-components-image/image.twig' with {
+  src: "/pattern-lab/images/content/logos/logo-paypal.svg",
+  alt: "logo paypal svg",
 } only %}
