--- a/apps/pattern-lab/src/_patterns/02-components/image/15-image-source-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/image/15-image-source-variations.twig
@@ -18,7 +18,7 @@
 <pre><code>srcset: "/pattern-lab/images/placeholders/500x500-200.jpg 200w,/pattern-lab/images/placeholders/500x500-480.jpg 480w",</code></pre>
 
 {% include '@bolt-components-image/image.twig' with {
-  src: "",
+  src: "/pattern-lab/images/placeholders/500x500.jpg",
   srcset: "/pattern-lab/images/placeholders/500x500-200.jpg 200w, /pattern-lab/images/placeholders/500x500-480.jpg 480w",
   alt: "Bill Murrey",
 } only %}
