fix bad image path in bolt-site

--- a/apps/bolt-site/templates/home.twig
+++ b/apps/bolt-site/templates/home.twig
@@ -341,10 +341,10 @@
         content: "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>",
         author: {
           image: {
-            src: "../../images/500x500.jpg",
+            src: "/images/500x500.jpg",
             placeholderImage: "data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==",
             placeholderColor: "#8d8e99",
-            srcset: "../../images/500x500.jpg",
+            srcset: "/images/500x500.jpg",
             lazyload: false
           },
           name: "Salem Ghoweri",
